@@ -220,10 +220,7 @@ local
 val letter = Scan.one (symbol #> Symbol.is_letter);
 val letdigs1 = Scan.many1 (symbol #> Symbol.is_letdig);
 
-val sub =
-  Scan.one (symbol #> (fn s =>
-    if ! legacy_isub_isup then s = "\\<^sub>" orelse s = "\\<^isub>" orelse s = "\\<^isup>"
-    else s = "\\<^sub>"));
+val sub = Scan.one (symbol #> (fn s => s = "\\<^sub>"));
 
 in
 
